-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.0.0 Alpha
-
None
-
652062dde33ddb0ecaf4bb9f38055d8ab87c462b (qt/qtbase/dev)
The change in https://codereview.qt-project.org/c/qt/qtbase/+/307778 attempts to port QAction to the new property system.
QAction's text properties are interdependent - if one is empty, it falls back to another. Since users can change these properties, at any time. For instance, reset them to empty so that they fall back; this is probably mostly going to happen during UI design time, but could also happen when actions are configured dynamically.
To model this behavior in the new system, the patch uses change and guard callbacks to dynamically create bindings.
Running the tst_qaction_kernel test with this patch consistently crashes with heap corruption.
- is required for
-
QTBUG-85521 Use new QProperty in QtGui
-
- Closed
-